<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_add">Add</string>
    <string name="action_add_ap">Blood pressure</string>
    <string name="action_add_pulse">Pulse</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_charts">Charts</string>
    <string name="action_create">Create</string>
    <string name="action_delete">Delete</string>
    <string name="action_import">Import</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="action_skip">Skip</string>
    <string name="app_name">Blood Pressure Diary</string>
    <string name="app_version" translatable="false">1.0.1</string>
    <string name="category_crisis">Hypertensive crisis. Consult your doctor immediately!</string>
    <string name="category_elevated">Elevated</string>
    <string name="category_normal">Normal</string>
    <string name="category_stage_1">High blood pressure, stage 1</string>
    <string name="category_stage_2">High blood pressure, stage 2</string>
    <string name="chart_period_month">1 month</string>
    <string name="chart_period_three_months">3 months</string>
    <string name="chart_period_year">1 year</string>
    <string name="chart_title_ap">Blood pressure</string>
    <string name="chart_title_pulse">Pulse</string>
    <string name="dialog_msg_backup_created">Backup created</string>
    <string name="dialog_msg_delete_log">Log will be deleted permanently.</string>
    <string name="dialog_msg_import_completed">Import completed</string>
    <string name="dialog_title_confirm">Confirm action</string>
    <string name="error_create_backup">Error creating backup</string>
    <string name="error_deleting">Error deleting</string>
    <string name="error_field_empty">Please fill in this field</string>
    <string name="error_import_backup">Error importing</string>
    <string name="error_loading">Error loading</string>
    <string name="error_opening">Error opening</string>
    <string name="error_saving">Error saving</string>
    <string name="hint_comment">Comment</string>
    <string name="hint_diastolic">Diastolic</string>
    <string name="hint_pulse">Pulse</string>
    <string name="hint_systolic">Systolic</string>
    <string name="main_pref_app_version_title">App version</string>
    <string name="main_pref_category_about_app">About app</string>
    <string name="main_pref_category_backup">Backup</string>
    <string name="main_pref_category_google" translatable="false">Google Drive</string>
    <string name="main_pref_category_reminders">Reminders</string>
    <string name="main_pref_export_backup">Export</string>
    <string name="main_pref_google_create_backup">Create backup</string>
    <string name="main_pref_google_import_backup">Import backup</string>
    <string name="main_pref_google_last_sync">Last sync</string>
    <string name="main_pref_import_backup">Import</string>
    <string name="main_pref_rate_app">Rate app</string>
    <string name="main_pref_reminder_evening">Evening</string>
    <string name="main_pref_reminder_morning">Morning</string>
    <string name="main_pref_theme">Theme</string>
    <string name="message_drive_export">All data on Google Drive will be replaced.</string>
    <string name="message_import_backup">All data on this device will be replaced.</string>
    <string name="month_apr">April</string>
    <string name="month_apr_a">Apr</string>
    <string name="month_aug">August</string>
    <string name="month_aug_a">Aug</string>
    <string name="month_dec">December</string>
    <string name="month_dec_a">Dec</string>
    <string name="month_feb">February</string>
    <string name="month_feb_a">Feb</string>
    <string name="month_jan">January</string>
    <string name="month_jan_a">Jan</string>
    <string name="month_jul">July</string>
    <string name="month_jul_a">Jul</string>
    <string name="month_jun">June</string>
    <string name="month_jun_a">Jun</string>
    <string name="month_mar">March</string>
    <string name="month_mar_a">Mar</string>
    <string name="month_may">May</string>
    <string name="month_may_a">May</string>
    <string name="month_nov">November</string>
    <string name="month_nov_a">Nov</string>
    <string name="month_oct">October</string>
    <string name="month_oct_a">Oct</string>
    <string name="month_sep">September</string>
    <string name="month_sep_a">Sep</string>
    <string name="msg_log_deleted">Log deleted</string>
    <string name="msg_log_saved">Log saved</string>
    <string name="msg_sign_google_success">Signed in successfully</string>
    <string name="no_data">No data</string>
    <string name="suffix_ap">mmHg</string>
    <string name="suffix_pulse">bpm</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_system">Follow system</string>
</resources>
